--- a/Unete.html
+++ b/Unete.html
@@ -47,19 +47,17 @@ somos una página de enlace donde encontras productos de defensa personal tecnol
 
 <h2>Categorías</h2>
 <ul>
-    <li><a href="curso1.html">Artes Marciales Coreanas</a></li> 
+    <li><a href="index.html">Home</a></li>
+    <li><a href="Acerca.html">Acerca de</a></li>
+    <li><a href="Productos TC.html">Productos TC</a></li>
+    <li><a href="menor15.html">-15</a></li>
+    <li><a href="mayor15.html">+15</a></li>
+    <li><a href="Unete.html">Unéte</a></li>
 </ul>
 
 <h2>Cursos defensa personal</h2>
 <ul>
-<li><a href="#">Curso 1</a></li> 
-<li><a href="#">Curso 2</a></li> 
-<li><a href="#">Curso 3</a></li> 
-<li><a href="#">Curso 4</a></li> 
-<li><a href="#">Curso 5</a></li> 
-<li><a href="#">Curso 6</a></li> 
-<li><a href="#">Curso 7</a></li> 
-<li><a href="#">Curso 8</a></li>
+<li><a href="curso1.html">Artes Marciales Coreanas</a></li> 
 </ul>
 
 </div>
