--- a/regalo.html
+++ b/regalo.html
@@ -32,7 +32,10 @@
 
 
 <div align="left">
-    <br>
+    Si quieres ser ganador de un curso gratis para tu hijo  de Artes marciales coreanas, entra a la página, toma una captura del curso y ve a la academia con tu captura y se un ganador.
+    <br><br>
+    Términos y condiciones: Este regalo tiene un límite de dos personas, solo será cálido si muestras una captura de la página en dónde se muestre el curso, sigue la página de "SECURITYMON" en redes sociales y a la academia.
+    <br><br>
     A continuación les presentaremos dos videos de defensa personal, donde les explicaran como defenderse en caso de ser necesitado.
     <br>
     Créditos al canal de YouTube:
