--- a/regalo.html
+++ b/regalo.html
@@ -36,6 +36,7 @@
     <br><br>
     Términos y condiciones: Este regalo tiene un límite de dos personas, solo será válido si muestras una captura de la página en dónde se muestre el curso, sigue la página de "SECURITYMON" en redes sociales y a la academia.
     <br><br>
+    <div align="center"><h2 ><a href="https://www.facebook.com/Security-Mon-100516626087398" style="padding: 0 0 0 0; color: #080147; font-size: 25px;">Facebook</a></h2></div>
     A continuación les presentaremos dos videos de defensa personal, donde les explicaran como defenderse en caso de ser necesitado.
     <br>
     Créditos al canal de YouTube:
