--- a/regalo.html
+++ b/regalo.html
@@ -35,8 +35,10 @@
     Si quieres ser ganador de un curso gratis para tu hijo  de Artes marciales coreanas, entra a la página, toma una captura del curso y ve a la academia con tu captura y se un ganador.
     <br><br>
     Términos y condiciones: Este regalo tiene un límite de dos personas, solo será válido si muestras una captura de la página en dónde se muestre el curso, sigue la página de "SECURITYMON" en redes sociales y a la academia.
-    <br><br>
-    <div align="center"><h2 ><a href="https://www.facebook.com/Security-Mon-100516626087398" style="padding: 0 0 0 0; color: #080147; font-size: 25px;">Facebook</a></h2></div>
+    <br>
+    <div class="container" style=" float: right;">
+    <button class="btn" onclick="location.href='https://www.facebook.com/Security-Mon-100516626087398'"><span class="btn-text">Vamos!</span></button>
+    </div>
     A continuación les presentaremos dos videos de defensa personal, donde les explicaran como defenderse en caso de ser necesitado.
     <br>
     Créditos al canal de YouTube:
